--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,4 +24,4 @@ parts:
     source: https://github.com/tytydraco/binaural
     source-type: git
     plugin: flutter
-    flutter-target: bin/binaural.dart
+    flutter-target: lib/tone.dart
